scrybe_frontend/src/components/SideBar/SideBar.module.scss
@import "../../assets/styles/utilities/functionsANDmedia";
@import "../../assets/styles/utilities/variables";

.sidebar__container {
  position: absolute;
  display: flex;
  width: 100vw;
  height: 100%;

  > {
    div:last-of-type {
      overflow-y: scroll;
      width: fit-content;
    }
  }

  .sidebar {
    flex-basis: 1;
    position: relative;
    width: 110px;
    height: 100vh;
    background-color: white;
    border-right: 1px solid #dfdede;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition-duration: 300ms;
  }

  .sidebar.open {
    width: 300px;
  }

  .navOpener {
    position: absolute;
    right: -16px;
    top: 32px;
    border: 2px solid $blue-500;
    border-radius: 50%;
    background-color: white;
    transform: rotate(-90deg);
    cursor: pointer;
  }

  .navOpener.rotate {
    transform: rotate(90deg);
  }

  .logoLink {
    display: flex;
    column-gap: pix-rem(10);
    padding: pix-rem(32) pix-rem(40);
    text-decoration: none;
    cursor: pointer;

    p {
      display: none;
      transform-origin: left;
      scale: 0;
    }
  }

  .logoLink.open {
    p {
      display: inline;
      font-weight: 600;
      font-size: pix-rem(40);
      line-height: 26px;
      color: $grey-500;
      cursor: pointer;
      scale: none;
    }
  }

  .navLinks {
    margin: pix-rem(100) 0 0 0;
    width: 100%;
  }

  .navLink {
    display: flex;
    justify-content: center;
    column-gap: pix-rem(20);
    padding: pix-rem(20) pix-rem(40);
    text-decoration: none;
    cursor: pointer;

    p {
      display: none;
    }
  }

  .navLink.open {
    justify-content: flex-start;

    p {
      display: inline;
      font-weight: 300;
      font-size: 20px;
      line-height: 26px;
      color: #6a6a6a;
      cursor: pointer;
    }
  }

  .navLink.active {
    background: $blue-50;
    border-right: 4px solid $blue-400;
  }

  @include mediaQuery(768px) {
    .sidebar {
      position: fixed;
      transform: translateX(-85%);
      opacity: 0.3;
      transition: transform 0.3s, opacity 0.8s cubic-bezier(0, 0, 0.9, 1);
    }

    .sidebar.open {
      opacity: 1;
      transform: translateX(0);
    }

    .navOpener {
      scale: 1.2;
    }
  }
}

